test/files/invalid/custom_attributes.stderr
error: User attributes are not supported
  ┌─ test/files/invalid/custom_attributes.fbs:1:11
  │
1 │ attribute "priority";
  │           ^^^^^^^^^^

Error: Bailing because of errors
